# zfc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/image/: bmp.cpp  bmp.hpp  image.cpp  image.hpp  jpg.cpp  jpg.hpp  png.cpp  png.hpp  ppm.cpp  ppm.hpp  qoi.cpp  qoi.hpp  tga.cpp  tga.hpp
src/utils/: deflate.cpp  deflate.hpp  jpg_dct.cpp  jpg_dct.hpp  png_filter.cpp  png_filter.hpp
